orchestrators/kubernetes/manifests/aqua_csp_007_networking/envoy/001_server_gateway_service-envoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-web
  namespace: aqua
  labels:
    app: aqua-web
spec:      
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
      name: aqua-web-ssl
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: aqua-web
  selector:
    app: aqua-web
  type: LoadBalancer
---
#headless service for aqua gateway
apiVersion: v1
kind: Service
metadata:
  name: aqua-gateway-headless
  labels:
    app: aqua-gateway
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: aqua-gate-ssl
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: aqua-gate
    port: 3622
    protocol: TCP
    targetPort: 3622
  - name: aqua-health
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: aqua-gateway
