orchestrators/kubernetes/manifests/aqua_csp_007_networking/envoy/003_envoy-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-lb
  namespace: aqua
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: healthserver
    port: 8082
    protocol: TCP
    targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: aqua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      securityContext:
        runAsUser: 11431
        runAsGroup: 11433
        fsGroup: 11433
      containers:
      - name: envoy
        image: envoyproxy/envoy-alpine:v1.14.1
        ports:
        - name: https
          containerPort: 8443
        - name: healthserver
          containerPort: 8082
        volumeMounts:
        - name: config
          mountPath: /etc/envoy
        - name: certs
          mountPath: /etc/ssl/envoy
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            httpHeaders:
            - name: x-envoy-livenessprobe
              value: healthz
            port: 8443
          initialDelaySeconds: 3
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            httpHeaders:
            - name: x-envoy-livenessprobe
              value: healthz
            port: 8443
          initialDelaySeconds: 10
      volumes:
      - name: config
        configMap:
          name: envoy-conf
      - name: certs
        secret:
          secretName: aqua-lb-certs
